--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.2",
   "description": "My opinionated yet practical Prettier config for modern JavaScript",
   "main": "index.json",
+  "devDependencies": {
+    "prettier": "^2.7.1",
+    "prettier-config-nick": "^1.0.2"
+  },
   "peerDependencies": {
     "prettier": ">= 1.17.0"
   },
@@ -14,5 +18,6 @@
   "author": "Nick McCurdy <nick@nickmccurdy.com> (https://nickmccurdy.com/)",
   "repository": "nickmccurdy/prettier-config",
   "funding": "https://github.com/nickmccurdy/prettier-config?sponsor=1",
-  "license": "ISC"
+  "license": "ISC",
+  "prettier": "."
 }
