--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.2",
   "description": "My opinionated yet practical Prettier config for modern JavaScript",
   "main": "index.json",
+  "scripts": {
+    "prepare": "git config core.hooksPath .hooks"
+  },
   "devDependencies": {
     "prettier": "^2.7.1",
     "prettier-config-nick": "^1.0.2"
