--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.7",
   "description": "My opinionated yet practical Prettier config for modern JavaScript",
   "devDependencies": {
-    "prettier": "^2.7.1",
-    "prettier-config-nick": "^1.0.2"
+    "prettier": "^2.7.1"
   },
   "peerDependencies": {
     "prettier": ">= 1.17.0"
