--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "prettier-config-nick",
-  "version": "1.0.8",
-  "description": "My opinionated yet practical Prettier config for modern JavaScript",
-  "devDependencies": {
-    "prettier": "^2.7.1"
-  },
-  "peerDependencies": {
-    "prettier": ">= 1.17.0"
-  },
-  "keywords": [
-    "prettier",
-    "config",
-    "prettier-config"
-  ],
-  "author": "Nick McCurdy <nick@nickmccurdy.com> (https://nickmccurdy.com/)",
-  "repository": "nickmccurdy/prettier-config",
-  "funding": "https://github.com/sponsors/nickmccurdy",
-  "license": "ISC",
-  "prettier": "./"
+	"name": "prettier-config-a11y",
+	"version": "1.0.0-alpha.1",
+	"description": "Prettier config improving accessibility for visual, cognitive, and motor disabilities",
+	"devDependencies": {
+		"prettier": "^2.7.1"
+	},
+	"peerDependencies": {
+		"prettier": ">= 1.17.0"
+	},
+	"keywords": [
+		"prettier",
+		"config",
+		"prettier-config"
+	],
+	"author": "Nick McCurdy <nick@nickmccurdy.com> (https://nickmccurdy.com/)",
+	"repository": "nickmccurdy/prettier-config",
+	"funding": "https://github.com/sponsors/nickmccurdy",
+	"license": "ISC",
+	"prettier": "./"
 }
